--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 .header{
     min-height: 100vh;
     width: 100%;
-    background-image: linear-gradient(rgba(4, 9, 30, 0.425),rgba(4, 9, 30, 0.349)), url(/wallimgg.jpg);
+    background-image: linear-gradient(rgba(4, 9, 30, 0.425),rgba(4, 9, 30, 0.349)), url(wallimgg.jpg);
     background-position: center;
     background-size: cover;
     position: relative;
@@ -296,7 +296,7 @@ h3{
 .cta{
     margin: 100px auto;
     width: 80%;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.589),rgba(0,0,0,0.589)),url(/ctai.png);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.589),rgba(0,0,0,0.589)),url(ctai.png);
     background-position: center;
     background-size: cover;
     border-radius: 10px;
